--- a/src/component/Body/Body.css
+++ b/src/component/Body/Body.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&display=swap');
+*{
+  font-family: 'Josefin Sans', sans-serif;
+}
 .body {
   background-color: #f1f3f6;
 }
@@ -12,20 +16,44 @@
 .per-person {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  width: 70%;
+  width: 80%;
 }
 .single-person {
-  height: 340px;
-  width: 180px;
-  padding: 20px 25px;
+  width: 220px;
+  padding: 20px;
   margin: 20px;
   word-wrap: break-word;
   background-color: #ffffff;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+}
+.single-person img{
+  border-radius: 100%;
+  display: block;
+  margin: auto;
+}
+.single-person p{
+  line-height: 12px;
+  font-size: 16px;
+}
+.single-person p:nth-child(2) {
+  font-size: 20px!important;
 }
 .cart-person {
   padding: 20px 25px;
   margin: 20px;
-  width: 30% !important ;
-  background-color: #ffffff;
+  width: 160px;
+  background-color: white;
   height: 100%;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+}
+button{
+  padding: 7px 35px;
+  border: 1px solid black;
+  color: white;
+  background-color: black;
+  cursor: pointer;
+  width: 100%;
+}
+button span{
+  padding-left: 10px;
 }
