--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -1,4 +1,14 @@
-.header{
-    text-align: center;
-    /* padding: 25px 0px; */
+.header {
+  text-align: center;
+  padding: 25px 0px;
+  background-color: #9d4edd;
+}
+.header-info p {
+  color: white;
+}
+.header h1 {
+  color: white;
+  font-weight: 900;
+  font-size: 52px;
+  line-height: 12px;
 }
